app/containers/Welcome/style.scss
@import "../../styles/global-styles.scss";
.welcome-page {
    text-align: center;
    position: relative;
    //display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
    .container {
      height: 100%;
    }
    .welcome-grid{
        animation: fadeIn .75s ease-in both;
    }
    .facility-graphic-container__img-container {
      height: 80%;
      overflow: hidden;
      width: 100%;
    }
    @media only screen and (max-aspect-ratio: 1920 / 1161) {
      img{
        height: 100%;
        min-width: 100%;
      }
    }
    @media only screen and (min-aspect-ratio: 1920 / 1161) {
      img{
        width: 100%;
        height: auto;
        object-fit: cover;
      }
    }
    .facility-graphic-container {
      position: absolute;
      width: 100%;
      height: 100%;
      flex-direction: column-reverse;
    }
    .facility-graphic-container.animate {
      position: relative;
    }
    .welcome-message{
      position: absolute;
      top: 20px;
      right: 64px;
    }
    .message {
        opacity: 0.8;
        color: #000000;
        font-family: "Noto Sans";
        font-size: 42px;
        letter-spacing: 0;
        line-height: 57px;
    }
    .title-break {
        height: 1px;
        width: 120px;
        background-color: #c8c8c8;
        margin: auto;
        margin-top: 8px;
        margin-bottom: 24px;
    }
    .welcome {
      color: #004f6e;
      font-style: normal;
      text-align: right;
      font-size: 42px;
      line-height: 57px;
    }
    .personal-name {
      color: #004f6e;
      font-style: normal;
      font-weight: bold;
      text-align: right;
      font-size: 88px;
      line-height: 120px;
      margin-top: -25px;
    }
    .footer {
        position: absolute;
        bottom: 32px;
        width: 100%;
    }
}

